# financial-services-copy

./: .gitignore
2033_fin_agent/: AGENTS.md  README.md
2033_fin_agent/backend/: .env.example  .gitignore  AGENTS.md  Dockerfile  fly.toml  pyproject.toml
2033_fin_agent/backend/app/: __init__.py  main.py
2033_fin_agent/backend/app/adapters/: llm_adapter.py  mcp_adapter.py
2033_fin_agent/backend/app/api/: agents.py  chat.py  health.py  mcp.py  model_configs.py  verticals.py
2033_fin_agent/backend/app/core/: config.py  deps.py  supabase.py
2033_fin_agent/backend/app/importers/: __init__.py  _cli_common.py  agent_parser.py  associations.py  import_agents.py  import_all.py  import_mcps.py  import_skills.py  import_verticals.py  mcp_parser.py  skill_parser.py  supabase_writer.py  vertical_parser.py
2033_fin_agent/backend/app/models/: schemas.py
2033_fin_agent/backend/app/services/: agent_service.py  chat_service.py  mcp_service.py  model_config_service.py  vertical_service.py
2033_fin_agent/backend/scripts/: smoke_supabase.py
2033_fin_agent/backend/tests/: conftest.py
2033_fin_agent/backend/tests/importers/: test_agent_parser.py  test_skill_vertical_mcp.py  test_supabase_writer.py
2033_fin_agent/backend/tests/runtime/: conftest.py  test_api.py  test_chat_api.py  test_config.py  test_deps.py  test_health.py  test_model_configs_api.py  test_smoke_supabase.py
2033_fin_agent/backend/tests/unit/: test_mcp_adapter.py  test_mcp_service.py  test_model_config_service.py
2033_fin_agent/frontend/: AGENTS.md  README.md  package-lock.json  package.json  (+1 more)
(+27 files in other folders)
